# pytest-sample

./: pyproject.toml  setup.cfg
pytest_example/: pytest_example.py
tests/: test_pytest_example.py
