[tool.poetry]
name = "pytest-example"
version = "0.1.0"
description = ""
authors = ["umt0120"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "pytest_example"},
    {include = "tests"}
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true

disallow_untyped_defs = true
check_untyped_defs = true
show_none_errors = true